<resources>
    <string name="app_name">Digikala</string>
    <string name="Recycler_Items_ImageView">Product Image</string>

    <!-- Dashboard -->
    <!-- Dashboard Recyclers Titles -->
    <string name="recycler_newest">جدیدترین محصولات</string>
    <string name="recycler_most_viewed">پربازدید ترین محصولات</string>
    <string name="recycler_top_rated">بیشترین امتیاز</string>

    <!-- Dashboard Bottom NavigationView Titles -->
    <string name="menu_home">خانه</string>
    <string name="menu_categories">دسته‌بندی</string>

    <string name="search_hint">جست‌وجو در فروشگاه…</string>

    <!-- details fragment-->
    <string name="details_name">نام محصول</string>
    <string name="details_description">توضیحات محصول</string>
    <string name="details_price">قیمت محصول</string>
    <string name="radio_top_seller">پر فروش ترین ها</string>
    <string name="radio_price_asc">قیمت صعودی</string>
    <string name="radio_price_desc">قیمت نزولی</string>
    <string name="radio_newest">جدیدترین ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>