<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.details.DetailsFragment">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider_detail"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#FFF"
            app:sliderIndicatorUnselectedColor="#5A5A5A"
            app:sliderScrollTimeInSec="1" />

        <TextView
            android:id="@+id/tv_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/iran_yekan_bold_fa_num"
            android:gravity="right"
            android:text="@string/details_price"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider_detail" />

        <TextView
            android:id="@+id/tv_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/iran_yekan_mobile_bold"
            android:text="@string/details_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_price" />

        <TextView
            android:id="@+id/tv_details_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/iran_yekan_mobile_regular"
            android:gravity="right"
            android:text="@string/details_description"
            app:layout_constraintEnd_toEndOf="@id/tv_details_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_name" />

        <Button
            android:fontFamily="@font/iran_yekan_mobile_black"
            android:backgroundTint="@color/black"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_cart"
            android:text="افزودن به سبد خرید"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>